@@ -7,6 +7,8 @@
     * Use English library to avoid hoops (#292)
     * Add Posterous importer (#254)
     * Fixes for Wordpress importer (#274, #252, #271)
+    * Better error message for invalid post date (#291)
+    * Print formatted fatal exceptions to stdout on build failure
   * Bug Fixes
     * Secure additional path exploits
 
